// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fieldAction is rendered 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
  <div
    className="kbnFieldButton__fieldAction"
  >
    <span>
      fieldAction
    </span>
  </div>
</div>
`;

exports[`fieldIcon is rendered 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__fieldIcon"
    >
      <span>
        fieldIcon
      </span>
    </span>
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`isActive defaults to false 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`isActive renders true 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s kbnFieldButton-isActive"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`sizes s is applied 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`sizes xs is applied 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--xs"
>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;

exports[`with drag handle is rendered 1`] = `
<div
  className="kbnFieldButton kbnFieldButton--s"
>
  <div
    className="kbnFieldButton__dragHandle"
  >
    <span>
      drag
    </span>
  </div>
  <button
    className="kbn-resetFocusState kbnFieldButton__button"
    onClick={[Function]}
  >
    <span
      className="kbnFieldButton__name eui-textBreakAll"
    >
      <span
        className="kbnFieldButton__nameInner"
      >
        name
      </span>
    </span>
  </button>
</div>
`;
